# genesis-rs

./: .gitignore  Cargo.toml
examples/ex01_argon/: config.toml  inp.mol  inp.par  inp.pos
src/: config.rs  ff.rs  lib.rs  main.rs  observer.rs  system.rs  timer.rs
src/parser/: mod.rs  mol.rs  par.rs  pos.rs  vel.rs
src/reporter/: csv.rs  dcd.rs  log.rs  mod.rs  rst.rs  xyz.rs
