[package]
name = "genesis-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
nalgebra = "0.33.2"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"

[lib]
name = "genesis"
path = "src/lib.rs"